# homelab-cloud

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  Makefile  README.md  grafana-k8s-monitoring-values.yaml  pyproject.toml
apps/control-plane-triage-agent/: Dockerfile  README.md  pyproject.toml
apps/control-plane-triage-agent/src/: diagnoser.py  discord.py  github_actions.py  kubernetes_triage.py  main.py  service.py  state.py
apps/control-plane-triage-agent/src/core/: __init__.py  config.py  event_bus.py  events.py  openhands_runtime.py  state.py  tracing.py
apps/control-plane-triage-agent/src/functions/: __init__.py  diagnoser.py  discord.py  github_actions.py  kubernetes_triage.py
apps/control-plane-triage-agent/src/run_time/: __init__.py  event_handlers.py  service.py
apps/control-plane-triage-agent/src/util/: __init__.py
flashsale/: Makefile  architecture.excalidraw  architecture.md  docker-compose.yaml  pyproject.toml
flashsale/docs/: flashsales-harness-engineering.md  flashsales.md
flashsale/docs/adrs/: 0001-hotspot-order-path-and-locking.md  0002-1-order-confirmation-off-synchronous-path.md  0002-async-reservation-terminalization.md  0003-isolate-order-worker-and-introduce-per-service-db-pools.md  0003-move-order-confirmation-off-synchronous-path.md  0003-remove-self-host-postgres-from-flashsales-chart.md
flashsale/docs/adrs/diagrams/: 0002-1-order-confirmation-comparison.d2  0002-async-reservation-terminalization.d2
flashsale/docs/diagram/: flashsale-architecture.d2  flashsale-c4-container.d2  flashsale-runtime-order-flow.d2  flashsale-state-machines.d2
flashsale/order-service/: Dockerfile  openapi.yaml  pyproject.toml  queue.py  requirements.txt
flashsale/order-service/app/: config.py  main.py  models.py  observability.py  order_storage.py  repositories.py  repository_in_memory.py  repository_postgres.py  repository_postgres_terminalization.py  repository_protocol.py  service.py  service_terminalization.py
flashsale/order-service/app/adapters/: order_mapping.py  order_memory_repository.py  order_memory_unit_of_work.py  order_postgres_repository.py  order_postgres_rows.py  order_postgres_schema.py  order_postgres_unit_of_work.py  product_reservation_http_client.py  terminalization_task_memory_repository.py  terminalization_task_postgres_repository.py  user_http_client.py
flashsale/order-service/app/application/: commands.py  create_order_use_case.py  order_queries.py  order_runtime.py  process_terminalization_task_use_case.py  results.py
flashsale/order-service/app/domain/: order.py  reservation_terminalization_task.py  state_machines.py  statuses.py
flashsale/order-service/app/entrypoints/: http_api.py  worker_loop.py  worker_main.py
flashsale/order-service/app/ports/: order_repository.py  product_reservation_client.py  terminalization_bus.py  terminalization_task_repository.py  unit_of_work.py  user_directory_client.py
flashsale/order-service/tests/: integration_test_support.py  test_api_contract.py  test_order_lifecycle.py  test_persistence_failure_consistency.py
flashsale/order-service/tests/interagtion/: __init__.py  order_compose_integration.py
flashsale/order-service/tests/unit/: test_api_contract.py  test_db_migration_compatibility.py  test_db_pool.py  test_health_probes.py  test_http_client_timeouts.py  test_observability.py  test_order_lifecycle.py  test_persistence_failure_consistency.py  test_worker_loop.py
flashsale/perf/: CONCURRENCY_TEST_PLAN.md  Makefile  concurrency-test.js  loadtest-k6.sh  loadtest-lite.js  loadtest.js  perf.mk
flashsale/perf/docs/: CONCURRENCY_TEST_PLAN.md
flashsale/perf/k6/: README.md
flashsale/perf/k6/lib/: k6-common.js  (+1 more)
flashsale/perf/python/: README.md  consistency_harness.py  observability_agent.py  test_observability_agent.py  test_observability_agent_simple.py
flashsale/perf/scripts/: loadtest-k6.sh
flashsale/product-service/: Dockerfile  openapi.yaml  pyproject.toml  requirements.txt
flashsale/product-service/app/: config.py  in_memory_repository.py  main.py  models.py  observability.py  repositories.py  service.py
flashsale/product-service/tests/: integration_test_support.py  test_api_contract.py  test_reservation_lifecycle.py
flashsale/scripts/: e2e-smoke.sh  export_openapi.py  flashsale-compose-integration.sh  flashsale_compose_integration.py  integration_test_support.py
flashsale/shared/: pyproject.toml
flashsale/shared/flashsale_shared/: __init__.py  cache.py  db_pool.py
flashsale/user-service/: Dockerfile  pyproject.toml  requirements.txt
flashsale/user-service/app/: config.py  db_pool.py  main.py  models.py  repositories.py  service.py
(+339 files in other folders)
