[project]
name = "homelab-cloud"
version = "0.1.0"
description = "Homelab flashsales microservices on k3s"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pylint>=3.3.0",
  "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = [
  "user-service",
  "product-service",
  "order-service",
]

[tool.pylint.format]
max-module-lines = 500

[tool.pylint.messages_control]
disable = [
  "all",
]
enable = [
  "too-many-lines",
]
