[project]
name = "control-plane-triage-agent"
version = "0.1.0"
description = "Long-running GitHub Actions triage agent for homelab-cloud control-plane"
requires-python = ">=3.12"
dependencies = [
  "kubernetes>=30.1.0",
  "openhands-sdk>=1.28.1",
  "openhands-tools>=1.28.1",
  "requests>=2.32.3",
]

[project.scripts]
control-plane-triage-agent = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "config",
  "diagnoser",
  "discord",
  "github_actions",
  "kubernetes_triage",
  "main",
  "service",
  "state",
]
package-dir = {"" = "src"}
