[project]
name = "flashsale-shared"
version = "0.1.0"
description = "Shared utilities for flashsale microservices"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "opentelemetry-api>=1.42",
  "opentelemetry-sdk>=1.42",
  "opentelemetry-exporter-otlp-proto-http>=1.42",
  "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flashsale_shared"]

[tool.hatch.build.targets.sdist]
include = ["flashsale_shared"]
